--- a/upgrade/roles/eclass_role/tasks/backup.yml
+++ b/upgrade/roles/eclass_role/tasks/backup.yml
@@ -1,18 +1,21 @@
 ---
+- name: Create variable from command
+  command: "date +%Y%m%d-%H%M"
+  register: timestamp
+
 - name: Create backup directory
   file:
-    path: /home/eclassBackup/Broadlearning_{{timestamp}}
+    path: /home/eclassBackup/Broadlearning_{{timestamp.stdout}}
     state: directory
 
 - name: Create tar.gz archive backup
   archive:
-     path: 
+     path:
         - "{{home_dir}}/intranetIP"
         - "{{home_dir}}/eclass30"
         - "{{home_dir}}/eclass40"
         - "{{home_dir}}/lib"
         - "{{home_dir}}/Smarty"
-     dest: /home/eclassBackup/Broadlearning_{{timestamp}}/backup.tar.gz
+     dest: /home/eclassBackup/Broadlearning_{{timestamp.stdout}}/backup.tar.gz
      format: gz
      force_archive: true
-
