--- a/upgrade/roles/junior_role/tasks/backup.yml
+++ b/upgrade/roles/junior_role/tasks/backup.yml
@@ -1,14 +1,17 @@
 ---
+- name: Create variable from command
+  command: "date +%Y%m%d-%H%M"
+  register: timestamp
+
 - name: Create backup directory
   file:
-    path: /home/juniorBackup/Broadlearning_{{timestamp}}
+    path: /home/juniorBackup/Broadlearning_{{timestamp.stdout}}
     state: directory
 
 - name: Create tar.gz archive backup
   archive:
-     path: 
+     path:
         - "{{home_dir}}/junior20"
-     dest: /home/juniorBackup/Broadlearning_{{timestamp}}/backup.tar.gz
+     dest: /home/juniorBackup/Broadlearning_{{timestamp.stdout}}/backup.tar.gz
      format: gz
      force_archive: true
-
