--- a/upgrade/roles/junior_role/vars/main.yml
+++ b/upgrade/roles/junior_role/vars/main.yml
@@ -4,4 +4,4 @@
 #password: x1
 #package: encoded_ip.3.0.2.11.1.0.tar.gz
 #DB_Schema_dir: /home/eclass/intranetIP/admin/eclassupdate/manual_update
-timestamp: $(date +%Y%m%d-%H%M)
+#timestamp: $(date +%Y%m%d-%H%M)
